--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,8 +37,7 @@ add_executable(${PROJECT_NAME}
     camera.cpp
     water.cpp
     cubemap.cpp
-    wavelet/grid.h
-    wavelet/grid.cpp
+    wavelet/waveletgrid.h
     wavelet/amplitude.h
     wavelet/spectrum.h
     wavelet/profilebuffer.h
@@ -53,6 +52,7 @@ add_executable(${PROJECT_NAME}
     water.h
     debug.h
     cubemap.h
+    wavelet/waveletgrid.cpp
     wavelet/amplitude.cpp
     wavelet/spectrum.cpp
     wavelet/profilebuffer.cpp
