adds skybox support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,8 @@ add_executable(${PROJECT_NAME}
     core.cpp
     camera.cpp
     cubemap.cpp
+    skybox.h
+    skybox.cpp
     fullscreenquad.h
     wavelet/waveletgrid.h
     wavelet/amplitude.h
